# MonteCarlo

./: CMakeLists.txt
apps/buffonsneedle/: README.md  input.txt  main.cpp  output.txt
apps/quartercircle/: README.md  input.txt  main.cpp  output.txt
apps/stat_buffonsneedle/: input.txt  main.cpp  output.txt  pi_estimates.txt  plot_hist.gp
apps/stat_quartercircle/: input.txt  main.cpp  output.txt  pi_estimates.txt  plot_hist.gp
include/: buffon_pi.h  io.h  quartercircle_pi.h  rng.h  statistics.h
src/: buffon_pi.cpp  io.cpp  quartercircle_pi.cpp  rng.cpp  statistics.cpp
